# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2017-03-19 ede
  * fix WFS in PLUS not working due too i18n error

2017-03-14 mmichaud <m.michael.michaud@orange.fr>
  * upgrade to jumpjgrapht 0.7.1 (fix a bug related to empty geometries)
  * improve how MultiInputDialog is resized (let JTextArea increase its size)

2017-03-13 mmichaud <m.michael.michaud@orange.fr>
  * Small improvements in UpdateWithJoinPlugIn
  * Fix a NullPointerException in Dissolve2PlugIn (ConcatenateUnique)

2017-03-12 ede
  * fix regression "#455 UI problem with decimal parameters and Locale" 
    rendering MultiInputDialog based plugins using decimal values unusable for 
    locales formatting decimal number w/ comma instead of dot
    https://sourceforge.net/p/jump-pilot/bugs/455/

2017-03-11 Giuseppe Aruta
  * Added CadTools extension to OpenJUMP Plus. A set of cad-like tools 
    and plugins mainly deriving from Kosmo 3.0 source code

2017-03-06 ede
  * initial java9 support, still compiled w/ java8
    workbench comes up, PLUS extensions throw some errors during startup still

2017-03-04 mmichaud <m.michael.michaud@orange.fr>
  * Fix a bug in PostGIS writer happening in the evolution merging process

2017-02-02 mmichaud <m.michael.michaud@orange.fr>
  * Upgrade csv-driver to 1.0.0 (encoding option to writer + other improvements)

2017-02-02 mmichaud <m.michael.michaud@orange.fr>
  * Restore ZoomToWMSPlugIn capabilities in more recent ZoomToWMSLayerPlugIn
  * WMSStylePlugIn dialog did not close (related to Fix #453)

* release 1.10 *****************************************************************

2017-01-27 mmichaud <m.michael.michaud@orange.fr>
  * Fix #453 about closing ChangeRasterStyle dialog (related to #433)

2017-01-21 mmichaud <m.michael.michaud@orange.fr>